add explosion and projectile animation, pixel-arts graphics for airports and planes + fix combat behavior